# Lqr_quadrotor

./: README.md
src/traj_server/: CMakeLists.txt  package.xml
src/traj_server/include/traj_controller/: traj_controller.hpp
src/traj_server/launch/: mavros_posix_sitl.launch  traj_server.launch
src/traj_server/src/: test_model.cpp  traj_controller.cpp  traj_server.cpp
